# traQbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  _showcase.yaml  docker-compose.yml  entrypoint.sh  release.sh  release.yml  showcase.yaml
.github/workflows/: PullReq.yml  Push.yml  master.yml  pr.yml  rust.yml
db/: hosts.allow
db/conf.d/: mysql.cnf
db/init/: 1_schema.sql  2_insert.sql  2_schema.sql  3_insert.sql  903_insert.sql
migrations/2019-08-23-144625_posts/: down.sql  up.sql
migrations/2019-09-02-051536_data/: down.sql  up.sql
migrations/2019-09-24-154030_update/: down.sql  up.sql
migrations/2019-10-17-143924_update-v2.4.2/: down.sql  up.sql
migrations/2019-10-31-145057_reconstruct/: down.sql  up.sql
migrations/2019-11-20-045524_v2.4.5/: down.sql  up.sql
migrations/2020-01-11-080134_channels/: up.sql
migrations/2020-01-23-153238_v2.5.0/: down.sql  up.sql
migrations/2020-01-23-153732_add_info/: down.sql  up.sql
src/: constants.rs  database.rs  lib.rs  main.rs  router.rs  tests.rs  utils.rs
src/constants/: arcaea.rs  stamp.rs
src/database/: models.rs  operation.rs  schema.rs
src/router/: functions.rs  guards.rs  handler.rs  receiver.rs
src/utils/: channel.rs  command.rs  passive.rs  random.rs  sender.rs  stamp.rs
static/: index.html  oauth.html  oauth_callback.html
static/js/: app.js
