[package]
name = "traqbot"
version = "0.1.0"
authors = ["xecua <courser4848@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "^1.0"
hmac-sha1 = "^0.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
