[package]
name = "traqbot"
version = "1.2.3"
authors = ["xecua <courser4848@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
regex = "1"
lazy_static = "1.3.0"
reqwest = "0.9"
log = "0.4.0"
env_logger = "0.6.2"
diesel = { version = "1.4.2", features = ["mysql"] }
dotenv = "0.9"
rand = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_mysql_pool", "serve"]
